# aoc

./: Makefile  README.md  aoc.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml  setup.cfg  setup.py  utils.py
.github/workflows/: ci.yml
aoc/: __init__.py  aoc.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
day1/: answer.py
tests/: context.py  test_aoc.py
