[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "My solutions to AoC 2020"
authors = ["Rui Marques <mail@ruimarques.xyz>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
